# ai-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
ai_assistant/: domain.py  exceptions.py
ai_assistant/api/: dependencies.py  main.py
ai_assistant/api/routes/: health.py  session.py
ai_assistant/api/v1/: routers.py
ai_assistant/api/v1/routes/: chatbot.py  session.py
ai_assistant/api/v1/schemas/: chat.py  session.py
ai_assistant/common/: logging.py  settings.py
ai_assistant/common/clients/: langfuse.py
ai_assistant/db/: database.py  dependencies.py
ai_assistant/migration/: env.py
ai_assistant/migration/versions/: 20250908_create_session_table_2a0ccb3391fb.py  no_op.py
ai_assistant/models/: base.py  session.py
ai_assistant/repository/: abstract.py  session.py
ai_assistant/services/: session.py
ai_assistant/services/ai/: runner.py  service.py
ai_assistant/services/ai/adk/: session_factory.py
ai_assistant/services/ai/providers/: base.py
tests/: conftest.py
tests/fixtures/: __init__.py  database.py  repository.py  service.py
tests/fixtures/factory/: session.py
tests/integration/: conftest.py
tests/integration/api/routes/: test_health.py
tests/integration/api/v1/: test_chatbot.py  (+1 more)
tests/integration/db/: test_database.py
tests/integration/migration/: test_migration.py
tests/integration/repository/: test_session.py
tests/integration/services/: test_session.py
tests/unit/services/: test_session.py
(+17 files in other folders)
